add info to index.html in bug-fix

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 </p>
 </div>
 
+
+<h3>Why are favourite things important?</h3>
+<p>
+    Because our brain needs to experience passion to function properly
+</p>
+
 <h3>Questions?</h3>
 <p>
     Please Contact
