added stylesheet in css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Favourite things</title>
     <h1>Carolines favourite things</h1>
 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
@@ -41,7 +42,7 @@
 
 <h3>Why are favourite things important?</h3>
 <p>
-    Because our brain needs to experience passion to function properly
+    Because the brain needs to experience passion to function properly
 </p>
 
 <h3>Questions?</h3>
