--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="heading">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <section class="favourites">
 <h2>These are a few of my favourite things</h2>
 <p>
     <ol>
@@ -22,9 +22,9 @@
         <li>Coffee</li>
     </ol>
 </p>
-</div>
+</section>
 
-<div>
+<section class="why">
 <h2>Why?</h2>
 <p> 
     <ol>
@@ -37,19 +37,22 @@
     </ol>
 
 </p>
-</div>
+</section>
 
-
-<h3>Why are favourite things important?</h3>
+<section class="brain">
+<h2>Why are favourite things important?</h2>
 <p>
     Because the brain needs to experience passion to function properly
 </p>
+</section>
 
+<section class="contact">
 <h3>Questions?</h3>
 <p>
     Please Contact
     <br>
     Caroline
 </p>
+</section>
 </body>
 </html>
